2005-02-10  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/all.texi: Add IA64.
	* doc/as.texinfo: Likewise.

	* doc/c-ia64.texi: Fix typos.

2005-02-10  Julian Brown  <julian@codesourcery.com>

	* config/tc-arm.c (do_t_ldmstm): Change BFD_RELOC_NONE to
	BFD_RELOC_UNUSED.
	(do_t_push_pop): Likewise.
	(md_assemble): Likewise.
	(md_apply_fix3): Handle BFD_RELOC_NONE correctly, make
	BFD_RELOC_UNUSED same as previous meaning of BFD_RELOC_NONE.
	(create_unwind_entry): Output dependency on the required personality
	routines.
	testsuite/gas/arm/unwind.d: Alter expected output to include
	dependency on __aeabi_unwind_cpp_pr[01].

2005-02-07  Nathan Sidwell  <nathan@codesourcery.com>

	* as.h (seg_not_empty_p): Return int, not bfd_boolean.
	* subsegs.c (seg_not_empty_p): Likewise.

2005-02-07  Inderpreet Singh <inderpreetb@noida.hcltech.com>

	* config/tc-maxq.c (md_estimate_size_before_relax): Correct the
	relative jump calculation. 
	<md_convert_frag) : Likewise.
	<output_disp): Likewise.

2005-02-07  Hans-Peter Nilsson  <hp@axis.com>

	* write.c (write_object_file): Recognize warning-symbol construct
	and skip object- and target- handling for the second symbol.

2005-02-02  Jan Beulich  <jbeulich@novell.com>

	* config/tc-ia64.c (dot_pred_rel): Update comment. Handle @-prefixed
	designators along with quoted ones. Free copy of quoted designator
	when done.

2005-02-01  Ben Elliston  <bje@au.ibm.com>

	* config/atof-ieee.c, config/obj-coff.c, config/obj-elf.c,
	config/obj-ieee.c, config/obj-som.c, config/obj-vms.c,
	config/tc-a29k.c, config/tc-alpha.c, config/tc-arc.c,
	config/tc-arm.c, config/tc-d30v.c, config/tc-dlx.c,
	config/tc-fr30.c, config/tc-h8300.c, config/tc-h8500.c,
	config/tc-i370.c, config/tc-i386.c, config/tc-i960.c,
	config/tc-ia64.c, config/tc-m32r.c, config/tc-m32r.h,
	config/tc-m68hc11.c, config/tc-m68hc11.h, config/tc-mips.c,
	config/tc-mn10200.c, config/tc-msp430.c, config/tc-ns32k.c,
	config/tc-openrisc.c, config/tc-or32.c, config/tc-pdp11.c,